# XOR-Neural-Network-v251122

./: .gitignore  LICENSE  pyproject.toml
nn/: __init__.py  activation.py  constant.py  loss.py  nn.py  schemas.py  train.py  viz.py
