[project]
name = "nn"
version = "0.1.0"
description = ""
authors = [
    {name = "Jese Ki",email = "2094901072@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uv (>=0.9.8,<0.10.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "pip-tools (>=7.5.1,<8.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"